# Apibara-testing-Template

./: .coveragerc  .dockerignore  .gitignore  README.md  config.toml  docker-compose.test.yml  pyproject.toml  pytest.ini
tests/: __init__.py  conftest.py
tests/assets/: sample_contract_abi.json
tests/integration/: constants.py  test_sample_contract.py  test_utils.py
